--- a/Proposal_Group022-SP23.ipynb
+++ b/Proposal_Group022-SP23.ipynb
@@ -44,11 +44,9 @@
     "\n",
     "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
     "\n",
-    "- Pelé\n",
-    "- Diego Maradonna\n",
-    "- Johan Cruyff\n",
-    "- Roberto Carlos\n",
-    "- Franz Beckenbaur"
+    "- Galen Ng\n",
+    "- \n",
+    "- "
    ]
   },
   {
@@ -86,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,7 +102,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,7 +131,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
