--- a/Proposal_Group022-SP23.ipynb
+++ b/Proposal_Group022-SP23.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "# Background\n",
     "\n",
-    "According to the United States government <a name=\"incomeImportance\"></a>[<sup>[1]</sup>](#importance-income), accurate survey data about income is hard to come by. There's plenty of issues in reporting data such as difficulty in understanding income questions, different interpretations of income questions, and other factors that make income reporting not as reliable as one might think. Having accurate income data is important as income data is an important metric in determining health related quality of life<a name=\"incomeHealth\"></a>[<sup>[2]</sup>](#health-income)"
+    "According to the United States government <a name=\"incomeImportance\"></a>[<sup>[1]</sup>](#importance-income), accurate survey data about income is hard to come by. There's plenty of issues in reporting data such as difficulty in understanding income questions, different interpretations of income questions, and other factors that make income reporting not as reliable as one might think. Having accurate income data is important as income data is an important metric in determining health related quality of life<a name=\"incomeHealth\"></a>[<sup>[2]</sup>](#health-income)."
    ]
   },
   {
@@ -235,8 +235,8 @@
    "metadata": {},
    "source": [
     "# Footnotes\n",
-    "<a name=\"lorenznote\"></a>1.[^](#lorenz): https://www.census.gov/content/dam/Census/library/working-papers/1997/adrm/sm97-05.pdf<br> \n",
-    "<a name=\"admonishnote\"></a>2.[^](#admonish): https://equityhealthj.biomedcentral.com/articles/10.1186/s12939-019-0942-1<br>\n",
+    "<a name=\"importance-income\"></a>1.[^](#incomeImportance): https://www.census.gov/content/dam/Census/library/working-papers/1997/adrm/sm97-05.pdf<br> \n",
+    "<a name=\"health-income\"></a>2.[^](#incomeHealth): https://equityhealthj.biomedcentral.com/articles/10.1186/s12939-019-0942-1<br>\n",
     "<a name=\"ucinote\"></a>3.[^](#uci): http://archive.ics.uci.edu/ml/datasets/Adult\n"
    ]
   },
