--- a/Proposal_Group022-SP23.ipynb
+++ b/Proposal_Group022-SP23.ipynb
@@ -41,9 +41,6 @@
    "metadata": {},
    "source": [
     "# Names\n",
-    "\n",
-    "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
-    "\n",
     "- Galen Ng\n",
     "- Regan Yang\n",
     "- Andy Chen"
@@ -59,6 +56,13 @@
     "- what the data used represents and how they are measured\n",
     "- what you will be doing with the data\n",
     "- how performance/success will be measured"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The goal of this project is to identify whether a person with specific metrics will make more or less than $50,000 a year. The data used will be a kaggle dataset showing features that contribute to an individuals income. This would include features such as gender, race, occupation, and all the information would have to classify you. There are certain features that don't have numerical values such as race or occupation so we can one hot encode those features. With this data, we will perform some exploratory data analysis on these features and see if there are biases that we can exclude such as a feature that measures higher education.  Once all of that is done, we will used our clean dataset to classify people who make more or less than 50,000 annually.Performance of a model is measured by accuracy and f1-score."
    ]
   },
   {
@@ -237,7 +241,7 @@
     "# Footnotes\n",
     "<a name=\"importance-income\"></a>1.[^](#incomeImportance): https://www.census.gov/content/dam/Census/library/working-papers/1997/adrm/sm97-05.pdf<br> \n",
     "<a name=\"health-income\"></a>2.[^](#incomeHealth): https://equityhealthj.biomedcentral.com/articles/10.1186/s12939-019-0942-1<br>\n",
-    "<a name=\"ucinote\"></a>3.[^](#uci): http://archive.ics.uci.edu/ml/datasets/Adult\n"
+    "<a name=\"ucinote\"></a>3.[^](#uci): http://archive.ics.uci.edu/ml/datasets/Adult"
    ]
   },
   {
@@ -264,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
